--- a/client5/src/editFile.html
+++ b/client5/src/editFile.html
@@ -43,7 +43,7 @@
 				</div>
 				<div class="row"  style="margin-left:20px;">
 					<div class="col col-lg-6">
-						<li repeat.for="doc of filesModule.filteredList" click.trigger="selectDoc(doc)" class="list-group-item">${doc.name}<span click.delegate="removeDocument(doc)" class="pull-right"><i class="fa fa-trash" aria-hidden="true"></i></span></li>
+						<li repeat.for="doc of filesModule.filteredList" click.trigger="selectDoc(doc)" class="list-group-item">${doc.name}</li>
 					</div>
 					<div show.bind="filesModule.selectedFile && filesModule.selectedFile.name && docSelected" class="col col-lg-6">
 						<div class="form-group">
@@ -72,6 +72,9 @@
 						</div>
 						<div class="form-group">
 							<Button class="form-control" click.trigger="save()">Save</Button>
+						</div>
+						<div class="form-group">
+							<Button class="form-control" click.trigger="removeDocument()">Delete</Button>
 						</div>
 					</div>
 				</div>
