--- a/client5/src/mainPage.html
+++ b/client5/src/mainPage.html
@@ -1,6 +1,6 @@
 <template>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="home#/mainPage">TERP10</a>
+        <a class="navbar-brand" href="#/mainPage">TERP10</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
