--- a/client/src/exercises.html
+++ b/client/src/exercises.html
@@ -8,6 +8,14 @@
     <div class="container">
         <div class="row">
             <div class="col">
+                <h4>System: YAMAHA</h4>
+                <h4>Client: 506</h4>
+                <h4>User ID: LEARN-0##</h4>
+                <h4>Initial PWD: workshop</h4>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col">
                 <h2 show.bind="exercisesArray.length" style="margin-top:40px;">Exercises</h2>
                     <ul show.bind="exercisesArray.length"  class="list-group">
                         <li repeat.for="file of exercisesArray" >
