--- a/client/src/exercises.html
+++ b/client/src/exercises.html
@@ -8,10 +8,10 @@
     <div class="container">
         <div class="row">
             <div class="col">
-                <h4>System: YAMAHA</h4>
-                <h4>Client: 506</h4>
-                <h4>User ID: LEARN-0##</h4>
-                <h4>Initial PWD: workshop</h4>
+                <h6 style="margin-top:40px;">System: YAMAHA</h6>
+                <h6>Client: 506</h6>
+                <h6>User ID: LEARN-0##</h6>
+                <h6>Initial PWD: workshop</h6>
             </div>
         </div>
         <div class="row">
