--- a/client/src/exercises.html
+++ b/client/src/exercises.html
@@ -12,6 +12,7 @@
                 <h6>Client: 506</h6>
                 <h6>User ID: LEARN-0##</h6>
                 <h6>Initial PWD: workshop</h6>
+                <a href="http://yamaha.ucc.uwm.edu/fiori" target="_blank">http://yamaha.ucc.uwm.edu/fiori</a>
             </div>
         </div>
         <div class="row">
