--- a/client/src/exercises.html
+++ b/client/src/exercises.html
@@ -7,12 +7,19 @@
     
     <div class="container">
         <div class="row">
-            <div class="col">
+            <div class="col-6">
                 <h6 style="margin-top:40px;">System: YAMAHA</h6>
                 <h6>Client: 506</h6>
                 <h6>User ID: LEARN-0##</h6>
                 <h6>Initial PWD: workshop</h6>
                 <a href="http://yamaha.ucc.uwm.edu/fiori" target="_blank">http://yamaha.ucc.uwm.edu/fiori</a>
+            </div>
+            <div class="col-6">
+                <h6 style="margin-top:40px;">System: T41</h6>
+                <h6>Client: 112</h6>
+                <h6>User ID: TS410-##</h6>
+                <h6>Initial PWD: LUBARUWM</h6>
+                <a href="http://wdflbmt2260.ucc.uwm.edu/fiori" target="_blank">http://yamaha.ucc.uwm.edu/fiori</a>
             </div>
         </div>
         <div class="row">
